--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,10 @@
   "name": "HelloIonic",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.2.4"
+    "ionic": "driftyco/ionic-bower#1.2.4",
+    "angular-ripple": "*"
+  },
+  "dependencies": {
+    "angular-whimsical-ripple": "^1.0.0"
   }
 }
